Update screen filling logic.  Added buttons (non-functioning)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <h1>Etch-a-Sketch</h1>
       <div id="screen"></div>
       <div id="button-group">
-        <button id="clear-btn">Clear Grid</button>
+        <button class="button" id="clear-btn">Clear Grid</button>
+        <button class="button" id="rainbow-btn">Rainbow Colors</button>
+        <button class="button" id="resize-btn">Change Resolution</button>
       </div>
     </div>
   </body>
