Added function to change screen resolution

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <h1>Etch-a-Sketch</h1>
       <div id="screen"></div>
       <div id="button-group">
-        <button class="button" id="clear-btn">Clear Grid</button>
-        <button class="button" id="rainbow-btn">Rainbow Colors</button>
+        <button class="button" id="clear-btn">Clear Screen</button>
+        <button class="button" id="color-btn">Color Rainbows</button>
         <button class="button" id="resize-btn">Change Resolution</button>
       </div>
     </div>
